# xcert-rs

./: .gitignore  .gitmodules  Cargo.toml  ISSUES.md  PERF.md  PLAN.md  README.md
.github/workflows/: ci.yml
bench/: openssl-baseline.sh
docs/: cli-interface.md  design.md  openssl-x509-reference.md  performance-baseline.md
fuzz/: Cargo.toml  x509.dict
fuzz/corpus/parse_cert/: ec-p384.pem  expired.pem  intermediate-ca.pem  many-extensions.pem  utf8-subject.pem
fuzz/corpus/parse_pem/: minimal.pem  root-ca.pem  server.pem
fuzz/fuzz_targets/: parse_cert.rs  parse_der.rs  parse_pem.rs  roundtrip.rs
tests/certs/: chain.pem  client.key  client.pem  ec-p256.key  ec-p256.pem  ec-p384.key  ed25519.key  ed25519.pem  expired.key  generate.sh  intermediate-ca.key  many-extensions.key  minimal.key  root-ca.der  root-ca.key  server.der  server.key  utf8-subject.key
tests/certs/degenerate/: corrupt-base64.pem  huge-length.der  multiple-pem.pem  negative-serial.der  nested-sequence.der  random-bytes.der  trailing-garbage.pem  truncated-body.der  truncated-header.der  wrong-pem-label.pem
tests/certs/real/: test-ec-fullchain.pem  test-ec-root-ca.pem  test-ec-server.pem  test-expired-chain-leaf.pem  test-expired-chain.pem  test-fullchain.pem  test-intermediate-ca.pem  test-root-ca.pem  test-server.pem  test-wrong-chain.pem  test-wrong-issuer.pem
tests/certs/reference/: client-dates.txt  client-email.txt  client-fingerprint-sha1.txt  client-fingerprint-sha256.txt  client-pubkey.txt  client-purpose.txt  client-serial.txt  client-subject.txt  client-text.txt  ec-p256-fingerprint-sha1.txt  ec-p256-fingerprint-sha256.txt  ec-p256-pubkey.txt  ec-p256-purpose.txt  ec-p256-serial.txt  ec-p256-subject.txt  ec-p256-text.txt  ec-p384-fingerprint-sha1.txt  ec-p384-fingerprint-sha256.txt  ec-p384-pubkey.txt  ec-p384-purpose.txt  ec-p384-serial.txt  ec-p384-subject.txt  ec-p384-text.txt  ed25519-fingerprint-sha1.txt  ed25519-fingerprint-sha256.txt  ed25519-issuer.txt  ed25519-pubkey.txt  ed25519-purpose.txt  ed25519-serial.txt  ed25519-subject.txt  ed25519-text.txt  expired-checkend.txt  expired-dates.txt  expired-fingerprint-sha1.txt  expired-fingerprint-sha256.txt  (+64 more)
tests/limbo/: limbo-vectors.json
xcert/: Cargo.toml
xcert-lib/: Cargo.toml
xcert-lib/src/: check.rs  convert.rs  display.rs  fields.rs  fingerprint.rs  lib.rs  oid.rs  parser.rs  util.rs  verify.rs
xcert-lib/src/verify/: chain.rs  checks.rs  constraints.rs  crl.rs  helpers.rs  mod.rs  trust_store.rs  webpki.rs
xcert-lib/tests/: integration.rs  pyca_cryptography.rs  zlint.rs
xcert/src/: main.rs
