[package]
name = "xcert-lib"
version = "0.1.0"
edition = "2021"
description = "Library for parsing and inspecting X.509 certificates"

[dependencies]
x509-parser = { version = "0.16", features = ["verify"] }
sha2 = "0.10"
sha1 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hex = "0.4"
digest = "0.10"

[lints]
workspace = true

[dev-dependencies]
