[package]
name = "xcert"
version = "0.1.0"
edition = "2021"
description = "Command-line tool for inspecting X.509 certificates"

[dependencies]
xcert-lib = { path = "../xcert-lib" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
humantime = "2"
serde_json = "1"

[lints]
workspace = true
